<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.example.mobiledevelopmentcourselabapp.presentation.view.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.mobiledevelopmentcourselabapp.presentation.view.list.view.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_card"
            app:destination="@id/navigation_card"
            app:defaultNavHost="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_card"
        android:name="com.example.mobiledevelopmentcourselabapp.presentation.view.list.view.CardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/navigation_third"
        android:name="com.example.mobiledevelopmentcourselabapp.presentation.view.third.ThirdFragment"
        android:label="@string/title_third"
        tools:layout="@layout/fragment_third" />
</navigation>